# sea-plus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.cc  api.h  movies.json  query.json  sea_client.cc  sea_server.cc  test.cc
ocean/: CMakeLists.txt  sea.grpc.pb.cc  sea.grpc.pb.h  sea.pb.cc  sea.pb.h
protos/: sea.proto
sea/: CMakeLists.txt  sea_client.cc  sea_server.cc
